<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Protector</string>
    <string name="password_correct">Password correct</string>

    <string name="photos">Photos</string>
    <string name="contacts">Contacts</string>
    <string name="videos">Videos</string>
    <string name="apps">Apps</string>
    <string name="backup">Backup</string>
    <string name="sms_call_logs">SMS and Call Logs</string>
    <string name="gallery">Gallery</string>
    <string name="done">DONE</string>
    <string name="restore_all">Restore all</string>
    <string name="megabyte">MB</string>
    <string name="no_records">No records found</string>
    <string name="hide_phone_numbers">HIDE PHONENUMBERS</string>
    <string name="hide_messages">HIDE MESSAGES</string>
    <string name="hide_messages_description">Select messages from your phone and hide them</string>
    <string name="hide_phone_numbers_description">Once you hide a phone number, all messages and call logs to or from this number will be hidden </string>
    <string name="from">From :</string>
    <string name="from_contact">Contact</string>
    <string name="from_call_logs">Call Logs</string>
    <string name="from_sms">SMS</string>
    <string name="settings">Settings</string>
    <string name="restore">Restore</string>


    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="new_private">New private</string>
    <string name="already_contact">Already contact</string>
    <string name="cancel">Cancel</string>
    <string name="restoring_item">Restoring</string>
    <string name="no_sdcard_available">No SD card available</string>
    <string name="alert">Alert</string>
    <string name="backup_dropbox">Backup Dropbox</string>
    <string name="backup_drive">Backup Google Drive</string>

    <string name="link_dropbox_cancel">Link dropbox cancel</string>

    <string name="set_backup_password">Set backup password</string>
    <string name="pass_backup_next_time">Set backup next time</string>
    <string name="hint_input_backup_password">Input backup password</string>
    <string name="hint_reinput_backup_password">Re-input backup password</string>
    <string name="actions">Actions</string>
    <string name="view_message_only">View messages only</string>
    <string name="deleted_success">Deleted successfully</string>
    <string name="not_support_phone">Your device isn\'t compatible with this feature</string>

    <string name="delete_entire_history">Delete entire history</string>
    <string name="delete_entire_history_message">Are you sure you want to delete all messages and call records from this number?&lt;br /&gt; WARNING: Once you delete them, you can\'t get them back.</string>
    <string name="please_try_again">Please try again!</string>
    <string name="restore_all_sms_to_phone">Restore all SMS to phone</string>
    <string name="restore_sms_ms">Do you want to restore all messages from this contact to the phone?</string>
    <string name="not_message">There are no messages</string>
    <string name="comfirm_delete_photo">Are you sure you want to delete the photo from your library?</string>
    <string name="comfirm_delete_video">Are you sure you want to delete the video from your library?</string>

    <string name="enter_backup_pass">Enter Back up Password</string>
    <string name="backup_password">Back up password</string>

    <!-- BUTTON -->
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_call">Call</string>
    <!-- MENU -->
    <string name="action_search">Search</string>
    <string name="action_compose">Compose</string>

    <!-- SETTING -->
    <string name="change_password">Change passcode</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="language">Language</string>

    <!-- DESCRIPTION -->
    <string name="keypad_number">Keypad number</string>
    <string name="passcode_circle">Passcode circle</string>
    <string name="ic_back">Back</string>
    <string name="des_icon">Icon</string>
    <!-- MESSAGE -->
    <string name="synchronizing_data">Synchronizing data &#8230;</string>
    <string name="cleaning_data">Cleaning data &#8230;</string>
    <string name="getting_data">Getting data &#8230;</string>
    <string name="copying_data">Copying data &#8230;</string>
    <string name="saving">Saving &#8230;</string>
    <string name="deleting">Deleting &#8230;</string>
    <string name="importing">Importing (%1$s) &#8230;</string>
    <string name="restoring">Restoring (%1$s) &#8230;</string>
    <string name="loading">Loading &#8230;</string>
    <string name="transferring">Transferring &#8230;</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="restore_success">Restore successed</string>
    <string name="copied">Copied</string>
    <string name="finishing">Finishing &#8230;</string>
    <string name="restoring_video">Restoring video &#8230;</string>
    <string name="transfering_video">Transferring video &#8230;</string>
    <string name="restoring_image">Restoring image &#8230;</string>
    <string name="transfering_image">Transferring image &#8230;</string>
    <string name="request_failed">Request failed. Please check your network connection</string>
    <string name="error">Error</string>
    <string name="internal_memory_full">Internal memory full</string>
    <string name="backup_fail">Backup fail</string>
    <string name="backup_success">Backup success</string>
    <string name="contact_imported_successfully">Contacts imported</string>
    <string name="there_contact_call_log">There is no contact which has SMS &amp; Call Log data in your device!</string>

    <string name="dropbox_backing_up">Dropbox backing up</string>
    <string name="drive_backing_up">Drive backing up</string>

    <string name="incorrect_password">Incorrect password</string>

    <string name="message">Message</string>
    <string name="sms_log">Sms Logs</string>

    <string name="incomming_call">Incomming call</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="missed_call">Missed call</string>
    <!-- TOAST -->
    <string name="image_imported">Image(s) imported</string>
    <string name="video_imported">Video(s) imported</string>
    <string name="confirm_password_incorrect">Confirm password incorrect</string>
    <string name="no_contact_selected">No contact selected</string>
    <string name="no_item_selected">No item selected</string>

    <string name="invalid_password_length">Password must have 4 numbers</string>
    <string name="invalid_new_password_length">New password must have 4 numbers</string>
    <string name="invalid_confirm_password_length">Confirm password must have 4 numbers</string>
    <string name="confirm_password_must_be_same">Confirm password must be the same as new password</string>
    <string name="change_password_successfully">Change password successfully</string>
    <!-- FONTS -->
    <string name="font_main">roboto_regular.ttf</string>
    <string name="font_light">roboto_light.ttf</string>

    <!-- ARRAY -->
    <string-array name="arr_backup">
        <item>Dropbox</item>
        <item>Google Drive</item>
    </string-array>
    <string-array name="arr_backup_icon">
        <item>ic_dropbox</item>
        <item>ic_google_drive</item>
    </string-array>
    <string-array name="arr_detail_action_delete">
        <item>Delete</item>
    </string-array>
    <string-array name="arr_detail_action_delete_icon">
        <item>ic_deletel_menu</item>
    </string-array>
    <string-array name="arr_detail_action">
        <item>Forward</item>
        <item>Restore to phone</item>
        <item>Delete</item>
    </string-array>
    <string-array name="arr_detail_action_icon">
        <item>ic_forward</item>
        <item>ic_restore</item>
        <item>ic_deletel_menu</item>
    </string-array>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>

</resources>