<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <com.protector.views.CustomFontTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/set_backup_password"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        font:font="@string/font_main" />

    <com.protector.views.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/pass_backup_next_time"
        android:textSize="16sp"
        font:font="@string/font_main" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_input_backup_password"
        android:inputType="numberPassword"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_reinput_backup_password"
        android:inputType="numberPassword"
        android:padding="5dp"
        android:singleLine="true"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_button_purple"
            android:gravity="center"
            android:text="@string/btn_ok"
            android:textColor="#313131"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>