<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <LinearLayout
            android:id="@+id/view_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/pressed_action"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <ImageView
                android:id="@+id/back"
                android:layout_width="10dp"
                android:layout_height="40dp"
                android:contentDescription="@string/ic_back"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@string/ic_back"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/ic_image" />

            <com.protector.views.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/sms_call_logs"
                font:font="@string/font_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="end" >

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/darker_gray" />

            <com.protector.views.CustomFontTextView
                android:id="@+id/tv_done"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/pressed_action"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/done"
                font:font="@string/font_main" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/list_message"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>