<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:font="http://schemas.android.com/apk/res-auto"
            xmlns:round_image="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height"
            android:background="@color/ColorPrimaryPressed">

            <LinearLayout
                android:id="@+id/view_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/action_bar_pressed_action"
                android:paddingLeft="5dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ic_back"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:src="@drawable/back"/>

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="40dp"
                    android:layout_height="@dimen/action_bar_height"
                    android:contentDescription="@string/ic_back"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    android:src="@drawable/ic_settings"/>

                <com.protector.views.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/settings"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    font:font="@string/font_main"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="end">

                <ImageView
                    android:id="@+id/tv_done"
                    android:layout_width="@dimen/action_bar_height"
                    android:layout_height="@dimen/action_bar_height"
                    android:background="@drawable/action_bar_pressed_action"
                    android:contentDescription="@string/done"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:src="@drawable/ic_action_bar_check"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/view_change_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/pressed_action"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_icon"
                android:src="@drawable/ic_key"/>

            <com.protector.views.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/change_password"
                android:textColor="#3e3e3e"
                android:textSize="18sp"
                font:font="@string/font_light"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:contentDescription="@string/des_icon"
                android:src="@drawable/ic_arrow_left"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/cl_gray_background"/>

        <LinearLayout
            android:id="@+id/view_alert"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/pressed_action"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_icon"
                android:src="@drawable/ic_settings"/>

            <com.protector.views.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sms_log"
                android:textColor="#3e3e3e"
                android:textSize="18sp"
                font:font="@string/font_light"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:contentDescription="@string/des_icon"
                android:src="@drawable/ic_arrow_left"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/cl_light_gray"/>

        <LinearLayout
            android:id="@+id/view_notification"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/pressed_action"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_icon"
                android:src="@drawable/ic_megaphone"/>

            <com.protector.views.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/notification"
                android:textColor="#3e3e3e"
                android:textSize="18sp"
                font:font="@string/font_light"/>

            <com.gc.materialdesign.views.Switch
                android:id="@+id/switchView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#1E88E5"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/cl_gray_background"/>

        <LinearLayout
            android:id="@+id/view_language"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/pressed_action"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/des_icon"
                android:src="@drawable/ic_image"/>

            <com.protector.views.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/photos"
                android:textColor="#3e3e3e"
                android:textSize="18sp"
                font:font="@string/font_light"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:contentDescription="@string/des_icon"
                android:src="@drawable/ic_arrow_left"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/cl_gray_background"/>


    </LinearLayout>

</ScrollView>